--- a/package.json
+++ b/package.json
@@ -26,17 +26,19 @@
     "material-ui-chip-input": "^1.1.0",
     "moment": "^2.27.0",
     "react": "^16.12.0",
+    "react-date-countdown-timer": "^1.1.0",
     "react-dom": "^16.12.0",
     "react-file-base64": "^1.0.3",
     "react-google-login": "^5.1.25",
-    "react-material-ui-carousel": "^3.4.2",
     "react-mui-dropzone": "^4.0.6",
     "react-redux": "^8.0.2",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-slick": "^0.29.0",
     "redux": "^4.2.0",
     "redux-thunk": "^2.3.0",
+    "sass": "^1.56.1",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.6"
   },
