--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "material-ui-chip-input": "^1.1.0",
     "moment": "^2.27.0",
     "react": "^16.12.0",
+    "react-date-countdown-timer": "^1.1.0",
     "react-dom": "^16.12.0",
     "react-file-base64": "^1.0.3",
     "react-google-login": "^5.1.25",
@@ -37,6 +38,7 @@
     "react-slick": "^0.29.0",
     "redux": "^4.2.0",
     "redux-thunk": "^2.3.0",
+    "sass": "^1.56.1",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.6"
   },
