--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "swiper": "^8.4.5"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set PORT=3007 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
